dibs-sql/src/render/snapshots/dibs_sql__render__tests__any_in_array.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "id", "status"
FROM "products"
WHERE "status" = ANY($1)
