dibs-sql/src/render/snapshots/dibs_sql__render__tests__delete_no_returning.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
DELETE FROM "products"
WHERE "deleted_at" IS NOT NULL
