dibs-sql/src/render/snapshots/dibs_sql__render__tests__delete_simple.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
DELETE FROM "products"
WHERE "id" = $1
RETURNING "id", "handle"
