dibs-sql/src/render/snapshots/dibs_sql__render__tests__excluded_reference.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "updated_at")
VALUES ($1, $2, NOW())
ON CONFLICT ("handle") DO UPDATE SET "status" = EXCLUDED."status", "updated_at" = NOW()
RETURNING "id", "handle"
