dibs-sql/src/render/snapshots/dibs_sql__render__tests__expr_count.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT COUNT("users".*)
FROM "users"
