dibs-sql/src/render/snapshots/dibs_sql__render__tests__expr_fncall.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT COALESCE("u"."nickname", "u"."name", 'Anonymous')
FROM "users" "u"
