dibs-sql/src/render/snapshots/dibs_sql__render__tests__expr_raw.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT 1 + 1 AS computed
FROM "users"
