dibs-sql/src/render/snapshots/dibs_sql__render__tests__ilike_search.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "id", "handle"
FROM "products"
WHERE "handle" ILIKE $1
ORDER BY "handle" ASC
LIMIT $2
