dibs-sql/src/render/snapshots/dibs_sql__render__tests__insert_select_unnest.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "created_at")
SELECT "handle", "status", NOW()
FROM UNNEST($1::text[], $2::text[]) AS "t"(handle, status)
RETURNING "id", "handle", "status"
