dibs-sql/src/render/snapshots/dibs_sql__render__tests__insert_simple.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "created_at")
VALUES ($1, $2, NOW())
RETURNING "id", "handle", "status"
