dibs-sql/src/render/snapshots/dibs_sql__render__tests__insert_with_default.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "created_at")
VALUES ($1, DEFAULT, NOW())
RETURNING "id"
