dibs-sql/src/render/snapshots/dibs_sql__render__tests__jsonb_contains.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "id"
FROM "products"
WHERE "metadata" @> $1
